--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,11 +3,11 @@
 
     <item
         android:id="@+id/active_engine"
-        android:title="active_engine" />
+        android:title="激活引擎" />
     <item
         android:id="@+id/stu_infor"
-        android:title="stuInformation" />
+        android:title="学生信息" />
     <item
         android:id="@+id/face_manage"
-        android:title="face manage" />
+        android:title="批量注册" />
 </menu>
